<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reportes">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="46dp"
        android:layout_height="20dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/linea"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="67dp"
        android:layout_height="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/columna"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tipo"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/descripcion"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lexema"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLinea"
        android:layout_width="38dp"
        android:layout_height="800dp"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/txtColumna"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtColumna"
        android:layout_width="39dp"
        android:layout_height="800dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/txtTipo"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="61dp"
        android:layout_height="800dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/txtDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="148dp"
        android:layout_height="801dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/txtLexema"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/txtLexema"
        android:layout_width="82dp"
        android:layout_height="793dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>